plugins {
    id "dev.architectury.loom" version "1.6-SNAPSHOT"
    id "maven-publish"
    id "com.diffplug.spotless" version "6.25.0"
    id 'org.jetbrains.kotlin.jvm' version "2.0.21"
}

base {
    archivesName = project.archives_base_name
}

String buildNumber = System.getenv("GITHUB_ACTION_NUMBER")
version = "${mod_version}" + (buildNumber != null ? "-build_${System.getenv("GITHUB_RUN_NUMBER")}" : "")
//version = project.mod_version
group = project.maven_group

loom {
    silentMojangMappingsLicense()
    forge {
        mixinConfigs = [
                "gtladditions.mixin.json"
        ]

        dataGen {
            mod(mod_id)
        }
    }

    runConfigs.named("data").configure {
        programArg("--existing=" + file("src/main/resources").absolutePath)
    }
}

repositories {
    mavenLocal()
    flatDir {
        dir 'libs'
    }
    mavenCentral()
    maven {
        name 'FirstDarkDev'
        url "https://maven.firstdarkdev.xyz/snapshots/"
    }
    maven {
        name 'Quilt'
        url 'https://maven.quiltmc.org/repository/release/'
    }
    maven {
        name = 'ParchmentMC'
        url = 'https://maven.parchmentmc.org'
    }
    maven {
        url "https://maven.saps.dev/releases/"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.ftb.mods"
        }
    }
    maven { // Registrate
        url = "https://maven.tterrag.com/"
        content {
            // need to be specific here due to version overlaps
            includeGroup("com.jozufozu.flywheel")
            includeGroup("com.tterrag.registrate")
            includeGroup("com.simibubi.create")
        }
    }
    maven {
        // Patchouli, JEI
        name = "BlameJared"
        url = "https://maven.blamejared.com/"
    }
    maven {
        url = "https://maven.theillusivec4.top/"
    }
    maven {
        // Curse Forge File
        url "https://cursemaven.com/"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        url "https://maven.architectury.dev/"
    }
    maven { // Ad Astra
        url "https://maven.teamresourceful.com/repository/maven-public/"
    }
}

dependencies {
    minecraft "com.mojang:minecraft:$project.minecraft_version"
    forge "net.minecraftforge:forge:$project.minecraft_version-$project.forge_version"
    // layered mappings - Mojmap names, parchment and QM docs and parameters
    mappings loom.layered {
        it.mappings("org.quiltmc:quilt-mappings:$project.minecraft_version+build.$project.quilt_mappings:intermediary-v2")
        it.parchment("org.parchmentmc.data:parchment-$project.minecraft_version:$project.parchment_mappings@zip")
        it.officialMojangMappings { nameSyntheticMembers = false }
    }

    modCompileOnly("mezz.jei:jei-$project.minecraft_version-forge-api:$project.jei_version") { transitive = false }
    modCompileOnly("mezz.jei:jei-$project.minecraft_version-common-api:$project.jei_version") { transitive = false }
    modRuntimeOnly("mezz.jei:jei-$project.minecraft_version-forge:$project.jei_version") { transitive = false }
    modCompileOnly("curse.maven:emi-580555:6420945") { transitive = false }

    modImplementation("com.gregtechceu.gtceu:gtceu-$project.minecraft_version:$project.gtceu_version") { transitive = false }
    modImplementation("com.lowdragmc.ldlib:ldlib-forge-$project.minecraft_version:$project.ldlib_version") { transitive = false }
    modImplementation("com.tterrag.registrate:Registrate:$project.registrate_version")
    modImplementation("curse.maven:kubejs-238086:5012072")
    modImplementation("curse.maven:rhino-416294:6186971")

    modImplementation("curse.maven:jade-324717:6855440")

    // Mixin Extras
    implementation(annotationProcessor("io.github.llamalad7:mixinextras-common:$project.mixinextras_version"))
    implementation("io.github.llamalad7:mixinextras-forge:$project.mixinextras_version")

    // lombok
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    modImplementation('curse.maven:applied-energistics-2-223794:7148487')

    modImplementation("dev.architectury:architectury-forge:${project.architectury_version}")
    modImplementation("dev.toma.configuration:configuration-forge-$project.minecraft_version:$project.configuration_version")

    forgeRuntimeLibrary("com.teamresourceful:yabn:1.0.3")
    forgeRuntimeLibrary("com.teamresourceful:bytecodecs:1.0.2")
    modImplementation("com.teamresourceful.resourcefullib:resourcefullib-forge-${project.minecraft_version}:${project.resourcefullib_version}")
    modImplementation("com.teamresourceful.resourcefulconfig:resourcefulconfig-forge-${project.minecraft_version}:${project.resourcefulconfig_version}")
    modImplementation("earth.terrarium.botarium:botarium-forge-${project.minecraft_version}:${project.botarium_version}")
    modImplementation("earth.terrarium.adastra:ad_astra-forge-${project.minecraft_version}:${ad_astra_version}") { transitive false }

    modImplementation("dev:gtmthings-1.3.5.a")
    modImplementation("dev:gtlcore-1.2.3.2-fix2")

    modImplementation("curse.maven:glodium-957920:5006780")
    modImplementation("curse.maven:ex-pattern-provider-892005:7144417")
    modImplementation("curse.maven:guideme-1173950:7127447")
    modImplementation("curse.maven:building-gadgets-298187:6850495")

    modImplementation("org.moddingx:LibX:1.20.1-5.0.1")

    // ftb-chunk
    modImplementation("curse.maven:ftb-chunks-314906:5378090"){ transitive = false }
    modRuntimeOnly("curse.maven:ftb-library-404465:5567591"){ transitive = false }
    modImplementation("curse.maven:ftb-teams-404468:5267190"){ transitive = false }

    implementation(include("org.scilab.forge:jlatexmath:1.0.7"))
    implementation(include("org.agrona:agrona:2.6.0"))
}

processResources {
    // set up properties for filling into metadata
    var properties = [
            "mod_license"      : mod_license,
            "mod_id"           : mod_id,
            "version"          : version,
            "mod_name"         : mod_name,
            "mod_author"       : mod_author,
            "forge_version"    : forge_version.split("\\.")[0], // only specify major version of forge
            "minecraft_version": minecraft_version,
            "gtceu_version"    : gtceu_version,
            "ad_astra_version" : ad_astra_version,
            "kubejs_version"   : kubejs_version,
            "jei_version"      : jei_version,
    ]
    inputs.properties(properties)

    filesMatching("META-INF/mods.toml") {
        expand properties
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.release.set(21)
}

java {
}

jar {
    // add some additional metadata to the jar manifest
    manifest {
        attributes([
                "Specification-Title"     : mod_id,
                "Specification-Vendor"    : mod_author,
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : version,
                "Implementation-Vendor"   : mod_author,
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

// configure the maven publication
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}

spotless {
    encoding 'UTF-8'

    java {
        target 'src/main/java/**/*.java'

        def orderFile = file("$rootDir/spotless/spotless.importorder")
        def formatFile = file("$rootDir/spotless/spotless.eclipseformat.xml")

        toggleOffOn()
        importOrderFile(orderFile)
        removeUnusedImports('cleanthat-javaparser-unnecessaryimport')
        endWithNewline()
        eclipse('4.31').configFile(formatFile)
    }
    kotlin {
        target 'src/main/java/**/*.kt'
        ktlint().editorConfigOverride([
                'ktlint_code_style': 'intellij_idea',
                'indent_size': '4',
                'indent_style': 'space',
                'continuation_indent_size': '4',
                'ktlint_brace_style': 'custom',
                'ij_kotlin_space_before_comma': 'false',
                'ij_kotlin_space_after_comma': 'true',
                'ij_kotlin_space_around_range': 'false',
                'insert_final_newline': 'true',
                'ij_kotlin_imports_layout': 'org.gtlcore.gtlcore.**,|,com.gregtechceu.**,|,com.lowdragmc.**,|,net.**,|,*,|,java.**,javax.**,kotlin.**,|,^',
                'ij_kotlin_packages_to_use_import_on_demand': 'java.util.*,org.gtlcore.gtlcore.**',
                'ktlint_import_ordering': 'true',
                'max_line_length': '65536',
                'ktlint_standard_no-wildcard-imports': 'disabled',
                'ktlint_standard_class-naming': 'disabled',
                'ktlint_standard_function-naming': 'disabled',
                'ktlint_standard_property-naming': 'disabled',
                'ktlint_standard_trailing-comma-on-call-site': 'disabled',
                'ktlint_standard_trailing-comma-on-declaration-site': 'disabled'
        ])
        trimTrailingWhitespace()
        endWithNewline()
    }
}
kotlin {
    jvmToolchain(21)
}